# ezkl-rust-server

./: .gitignore  .profile  1l_relu.pf  1l_relu.vk  4l_relu_conv_fc.pf  4l_relu_conv_fc.vk  Cargo.toml  Dockerfile  Procfile  README.md  aggr_2l.code  aggr_2l.pf  eth_tokyo.sol  lib.rs  network.onnx  onnx_1l_conv.txt  onnx_file_base64.txt  onnx_file_data.json  output.json  package-lock.json  package.json  rust-toolchain  test_project.sol
blockchain/: .env  hunter.json  hunter_caller.rs  mod.rs
data/: forward.json  mock.json  sol_calldata.json  submit_proof.json
data/1l_relu/: input2.json
data/4l_relu_conv_fc/: input.json
data/baby_gaia_2d/: babyGaia_gen_2d.py  baby_gaia_2d.pf  baby_gaia_2d.vk  forward_baby_gaia.json  mock_baby_gaia.json  network.onnx  output.json  prove_baby_gaia.json
data/eth_tokyo/: env_mock.json  env_submit_proof.json  eth_tokyo.code  eth_tokyo.pf  eth_tokyo.vk  input.json  network.onnx  output.json  simple_server.py
data/test_project/: genevm_test_project.json  input.json  prove_test_project.json  test_project.code  test_project.pf  test_project.vk
example_rpc_calls/: curl_commands.txt  hello_world.hurl  local_call_run_create_kzg_params.hurl  local_call_run_generate_proof.hurl  local_call_run_table.hurl  local_create_kzg_params.hurl  local_forward.hurl  local_forward_etheremon.hurl  local_generate_proof.hurl  local_mock.hurl  local_mock_etheremon.hurl  local_submit_proof.hurl  local_submit_proof_etheremon.hurl  local_verify_aggr.hurl
example_rpc_calls/baby_gaia/: forward_baby_gaia.hurl  generate_evm_conctract.hurl  mock_baby_gaia.hurl  submit_proof_baby_gaia.hurl
example_rpc_calls/ethermon/: local_forward_etheremon.hurl  local_mock_etheremon.hurl  local_submit_proof_etheremon.hurl
src/: hunter_z_hunter_rpc.rs  lib.rs  main.rs  request.rs  types.rs  utils.rs
src/blockchain/: hunter_caller.rs  hunterzhunter.sol  mod.rs
