[package]
name = "rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rpc
jsonrpsee = { version = "^0.16", features = ["full"] }
eyre = "0.6.5"
thiserror = "1.0.26"
dotenv = "0.15.0"
tokio = { version = "1.8.1", features = ["full"] }
ezkl = { git = "https://github.com/danilowhk/ezkl.git" }
log = "0.4.14"
colog = "1.1.0"
serde_json = "1.0.64"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.1" }
ethers = "1.0.2"

