[package]
name = "rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rpc
eyre = "0.6.5"
thiserror = "1.0.26"
dotenv = "0.15.0"
ezkl-lib = { git = "https://github.com/zkonduit/ezkl",  branch = "main"  }
log = "0.4.14"
colog = "1.1.0"
serde_json = "1.0.64"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
actix-web = "4.0.0-beta.10"
actix-rt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
base64 = "0.21.0"